# 42_PISCINE_PYTHON

./: CoursPython.py  README.md
Python - 0 - Starting/ex00/: Hello.py
Python - 0 - Starting/ex01/: format_ft_time.py
Python - 0 - Starting/ex02/: find_ft_type.py
Python - 0 - Starting/ex03/: NULL_not_found.py
Python - 0 - Starting/ex04/: whatis.py
Python - 0 - Starting/ex05/: building.py
Python - 0 - Starting/ex06/: filterstring.py  ft_filter.py
Python - 0 - Starting/ex08/: Loading.py  tester.py
Python - 0 - Starting/ex09/: pyproject.toml
Python-0-Starting/: README.md
Python-0-Starting/ex00/: Hello.py
Python-0-Starting/ex02/: find_ft_type.py
Python-0-Starting/ex04/: whatis.py
Python-0-Starting/ex05/: building.py
Python-0-Starting/ex06/: filterstring.py  ft_filter.py
Python-0-Starting/ex07/: sos.py
Python-0-Starting/ex09/: README.md  pyproject.toml  test.py
Python-0-Starting/ex09/src/ft_package/: count_in_list.py
Python-0-Starting/ex09/src/ft_packagge.egg-info/: PKG-INFO  SOURCES.txt
Python-1-Array/: README.md
Python-1-Array/ex00/: give_bmi.py  tester.py
Python-1-Array/ex01/: array2D.py  tester.py
Python-1-Array/ex02/: load_image.py  tester.py
Python-1-Array/ex03/: load_image.py  zoom.py
Python-1-Array/ex04/: load_image.py  rotate.py
Python-1-Array/ex05/: pimp_image.py  tester.py
Python-2-DataTable/: README.md
Python-2-DataTable/ex00/: load_csv.py  tester.py
Python-2-DataTable/ex01/: aff_life.py
Python-2-DataTable/ex02/: aff_pop.py  load_csv.py
Python-2-DataTable/ex03/: projection_life.py
(+12 files in other folders)
