[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name="ft_package"
version ="0.0.1"
description = "A sample test package"
authors= [
    {name="galambey"},
    {email="galambey@42.fr"},
    ]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/galambey/ft_package"